[gd_scene load_steps=31 format=2]

[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_020.png" type="Texture" id=1]
[ext_resource path="res://Ted/Ted.gd" type="Script" id=2]
[ext_resource path="res://Audio/plip.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/plop.wav" type="AudioStream" id=4]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_05.png" type="Texture" id=5]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_01.png" type="Texture" id=6]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_03.png" type="Texture" id=7]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_04.png" type="Texture" id=8]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_10.png" type="Texture" id=9]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_08.png" type="Texture" id=10]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_02.png" type="Texture" id=11]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_06.png" type="Texture" id=12]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_07.png" type="Texture" id=13]
[ext_resource path="res://Ted/TedWalk/TED WALK/TED_WALK_09.png" type="Texture" id=14]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_023.png" type="Texture" id=15]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_024.png" type="Texture" id=16]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_028.png" type="Texture" id=17]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_018.png" type="Texture" id=18]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_021.png" type="Texture" id=19]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_017.png" type="Texture" id=20]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_025.png" type="Texture" id=21]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_026.png" type="Texture" id=22]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_019.png" type="Texture" id=23]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_029.png" type="Texture" id=24]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_022.png" type="Texture" id=25]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_027.png" type="Texture" id=26]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_016.png" type="Texture" id=27]
[ext_resource path="res://Ted/TedJump/TED JUMP/JUMP_030.png" type="Texture" id=28]

[sub_resource type="CapsuleShape2D" id=1]
radius = 0.928609
height = 72.6155

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 9 ) ],
"loop": true,
"name": "ted_walks",
"speed": 24.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 1 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 15 ) ],
"loop": false,
"name": "ted_jump_up",
"speed": 24.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 20 ), ExtResource( 18 ) ],
"loop": false,
"name": "ted_jump_windup",
"speed": 24.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 24 ), ExtResource( 28 ) ],
"loop": false,
"name": "ted_falling",
"speed": 24.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "ted_stands",
"speed": 1.0
} ]

[node name="Ted" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10, 12 )
scale = Vector2( 50, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "ted_jump_windup"
frame = 2
playing = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[node name="PlopSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
